@@ -1,4 +1,5 @@
 0.9.0
+ - ref: remove legacy "discrete" feature type
  - ref: renamed kwargs for `Indetation.rate_quality`
  - ref: new method `nanite.load_group` for loading experimental data
  - ref: new class read.data.IndentationData for managing data
